[PAXEXAM-511] copied and adapted all Karaf container regression tests from Apache Karaf trunk